@@ -153,7 +153,7 @@ if ($config["metaconsole"] == 0){
 				<td>
 				 <?php
 if ($config["metaconsole"] == 0){
-                   echo '<a class="white_bold" href="index.php?sec=eventos&amp;sec2=operation/events/events&amp;refr=5"><img src="images/lightning_go.png" alt="lightning_go" class="bot" />&nbsp;'.__('Events').'</a>';
+                   echo '<a class="white_bold" href="index.php?sec=eventos&amp;sec2=operation/events/events"><img src="images/lightning_go.png" alt="lightning_go" class="bot" />&nbsp;'.__('Events').'</a>';
 }
                  ?>
 				</td>
